Added a few tests at the end

--- a/HW - DoublyLinkedList (1).ipynb
+++ b/HW - DoublyLinkedList (1).ipynb
@@ -36,21 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "59e4699c",
+   "execution_count": 13,
+   "id": "07fccbaa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Doubly linked list has different functions: insert (start/end), delete (start/end), traverse, display\n",
     "\n",
-    "\n",
     "# copied from class lecture\n",
     "\n",
     "class Node:\n",
-    "    def __init__(self, value, node=None):\n",
+    "    def __init__(self, value, next_node=None, prev_node=None):\n",
     "        self.value = value\n",
-    "        self.next_node = node\n",
-    "        self.previous_node = node # added a previous node pointer\n",
+    "        self.next_node = next_node\n",
+    "        self.prev_node = prev_node # added a previous node pointer, null by default\n",
     "    \n",
     "    def get_value(self):\n",
     "        return self.value\n",
@@ -64,11 +63,11 @@
     "    def set_next_node(self, node):\n",
     "        self.next_node = node\n",
     "        \n",
-    "    def get_previous_node(self): # added attributes for new pointers\n",
-    "        return self.previous_node\n",
+    "    def get_prev_node(self): # added attributes for prev_node pointer\n",
+    "        return self.prev_node\n",
     "        \n",
-    "    def set_previous_node(self, node):\n",
-    "        self.prevoius_node = node\n",
+    "    def set_prev_node(self, prev_node):\n",
+    "        self.prev_node = prev_node\n",
     "        \n",
     "    def __repr__(self):\n",
     "        return f'<Node: {self.value}>'\n",
@@ -122,30 +121,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b9791cfd",
+   "execution_count": 14,
+   "id": "2914eb36",
    "metadata": {},
    "outputs": [],
    "source": [
     "dll = doublyLinkedList()\n",
-    "dll.add(9)\n",
-    "dll.add(70)\n",
-    "dll.add(42)"
+    "dll.add(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a53e3d20",
+   "execution_count": 15,
+   "id": "e1a0e6f6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Node: 42>"
+       "1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dll.get_size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "df6e5b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dll.add(4)\n",
+    "dll.add(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f489523c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dll.get_size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "db1755c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Node removed'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dll.remove(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "de1930af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dll.get_size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "b8781d82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Node: 6>"
+      ]
+     },
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,32 +248,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "d8cf8c9b",
+   "execution_count": 38,
+   "id": "3b8697c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list = [1, 4, 6]\n",
+    "\n",
+    "# [{prev_node(null), 1, next_node(4)}, {prev_node(Node(1), 4, next_node(6)}, {prev_node(4), 6, next_node(null)}]\n",
+    "\n",
+    "n = Node(4, 6, 1)\n",
+    "\n",
+    "# middle node, value, next, prev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "3a087fec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Node removed'"
+       "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dll.remove(42)"
+    "n.get_prev_node()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "07fccbaa",
+   "execution_count": 40,
+   "id": "a0d84e24",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.get_next_node()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "3cb4d402",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<Node: 4>'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.__repr__()"
+   ]
   }
  ],
  "metadata": {
